--- a/with_server/package.json
+++ b/with_server/package.json
@@ -6,7 +6,10 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "aws-sdk": "^2.596.0",
+    "cookie-parser": "^1.4.4",
+    "crypto": "^1.0.1",
+    "crypto-promise": "^2.1.0",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
@@ -14,7 +17,10 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.2",
-    "promise-mysql": "^4.1.1"
+    "promise-mysql": "^4.1.1",
+    "util": "^0.12.1"
   }
 }
