--- a/with_server/package.json
+++ b/with_server/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "with-server",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "^4.16.4",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.2",
-    "promise-mysql": "^4.1.1"
-  }
+    "name": "with-server",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "crypto-promise": "^2.1.0",
+        "debug": "~2.6.9",
+        "express": "^4.16.4",
+        "http-errors": "~1.6.3",
+        "jade": "~1.11.0",
+        "moment": "^2.24.0",
+        "moment-timezone": "^0.5.27",
+        "morgan": "~1.9.1",
+        "nodemon": "^2.0.2",
+        "promise-mysql": "^4.1.1"
+    }
 }
