--- a/with_server/package.json
+++ b/with_server/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
     "util": "^0.12.1"
