--- a/with_server/package.json
+++ b/with_server/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "aws-sdk": "^2.596.0",
+    "charset": "^1.0.1",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "crypto-promise": "^2.1.0",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
+    "iconv": "^2.3.5",
+    "iconv-lite": "^0.5.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
