--- a/with_server/package.json
+++ b/with_server/package.json
@@ -13,7 +13,7 @@
     "crypto-promise": "^2.1.0",
     "debug": "~2.6.9",
     "express": "^4.16.4",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "iconv": "^2.3.5",
     "iconv-lite": "^0.5.0",
     "jade": "~1.11.0",
