--- a/with_server/package.json
+++ b/with_server/package.json
@@ -24,6 +24,8 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.2",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
     "urlencode": "^1.1.0",
