--- a/with_server/package.json
+++ b/with_server/package.json
@@ -27,6 +27,7 @@
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.2",
     "promise-mysql": "^4.1.1",
+    "rand-token": "^0.4.0",
     "urlencode": "^1.1.0",
     "util": "^0.12.1"
   }
