fixed: 게시글 수정 오류 수정 및 반환값 수정

--- a/with_server/package.json
+++ b/with_server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.596.0",
     "charset": "^1.0.1",
+    "constantinople": "^4.0.1",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "crypto-promise": "^2.1.0",
