--- a/with_server/package.json
+++ b/with_server/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "greenlock-express": "^4.0.3",
     "http-errors": "^1.6.3",
     "iconv": "^2.3.5",
     "iconv-lite": "^0.5.0",
